<resources>
    <string name="app_name">Remote</string>


    <!--MainActivity-->
    <string name="main_button">搜尋裝置</string>
    <string name="ble_not_supported">該裝置不支援藍芽</string>

    <!--DeviceScanActivity-->
    <string name="unknown_device">未知裝置</string>
    <string name="menu_scan">掃描裝置</string>
    <string name="menu_stop">停止掃描</string>
    <string name="title_devices">裝置掃描</string>
    <string name="menu_connect">連接裝置</string>
    <string name="menu_disconnect">斷開裝置</string>
    <string name="trySecond">嘗試第二次連線...</string>
    <string name="maybeSoFair">該裝置無法連接，可能離裝置距離太遠了</string>


    <!--DeviceControlActivity-->
    <string name="Device_name">裝置名稱: </string>
    <string name="Status">連接狀態: </string>
    <string name="Connect_Progress">連接進度: </string>
    <string name="Connect_true">已連線</string>
    <string name="Connect_false">未連線</string>
    <string name="Connecting1">連線裝置中.</string>
    <string name="Connecting2">連線裝置中..</string>
    <string name="Connecting3">連線裝置中...</string>
    <string name="Pz_input_psw">請輸入密碼</string>
    <string name="Correct">輸入正確！</string>
    <string name="Error">傳輸錯誤?</string>
    <string name="OK">確定</string>
    <string name="cancel">取消</string>
    <string name="no_data">如果沒反應，請手動幫我點右上的連線</string>
    <string name="inputDevicePassword">請輸入裝置密碼</string>
    <string name="inputDevicePasswordHint">請輸入密碼</string>
    <string name="inputError">輸入錯誤！</string>

    <!--所有的資料中文名稱-->
    <string name="HH">最高警報</string>
    <string name="LL">最低警報</string>
    <string name="PV">補正</string>
    <string name="EH">上限警報</string>
    <string name="EL">下限警報</string>
    <string name="CR">顏色轉換</string>
    <string name="SPK">警報聲</string>
    <string name="IH">最大量程</string>
    <string name="IL">最小量程</string>
    <string name="INTER">記錄間隔</string>
    <string name="device_name">裝置名稱</string>

    <!--TH-->
    <string name="Temperature">溫度</string>
    <string name="Humidity">濕度</string>

    <!--II-->
    <string name="FirstRow">第一排</string>
    <string name="SecondRow">第二排</string>
    <string name="ThirdRow">第三排</string>
    <string name="decimal_point">小數點</string>

    <!--DataDisplayActivity-->
    <string name="dont_blank">表格請勿空白！</string>
    <string name="DWTitle">Jetec Remote</string>
    <string name="DWweb">www.jetec.com.tw</string>
    <string name="Save">  儲存設定</string>
    <string name="Load">  匯入設定</string>
    <string name="Download">  資料下載</string>
    <string name="DisplayChart">  顯示圖表</string>
    <string name="ModifyPSW">  修改密碼</string>
    <string name="stopRecord">  停止記錄</string>
    <string name="StartRecord">  開始記錄</string>
    <string name="plzGetName">請取個喜歡的名字吧</string>
    <string name="createSuccess">新增成功</string>
    <string name="plzSelectModifyItem">請選擇欲修改之物件</string>
    <string name="plzInputModifyName">請輸入修改的名稱</string>
    <string name="modify">修改</string>
    <string name="Dont_blank1">此處不可為空</string>
    <string name="plzSelectDeleteItem">請選擇欲刪除之物件</string>
    <string name="deleteSuccess">刪除成功！</string>
    <string name="NameIsTooLong">名字長度不得大於5中文字與15個英數字</string>

    <!--DataDisplayActivityRecordFunction-->
    <string name="hour">小時: </string>
    <string name="min">分鐘: </string>
    <string name="sec">秒鐘: </string>
    <string name="hour1">小時</string>
    <string name="min1">分鐘</string>
    <string name="sec1">秒鐘</string>

    <!--setting dialog-->
    <string name="btCreate">新增</string>
    <string name="btModify">修改命名</string>
    <string name="btDelete">刪除資料</string>
    <string name="btClose">關閉視窗</string>

    <!--finalCheckDialog-->
    <string name="finalCheckTitle">確定要匯入嗎?</string>
    <string name="loading">匯入中..</string>
    <string name="loadFinal">已匯入</string>

    <!--RecordFunction-->
    <string name="opening">開啟記錄中...</string>
    <string name="closing">關閉記錄中...</string>
    <string name="opened">已開啟記錄</string>
    <string name="closed">已停止記錄</string>

    <!--ModifyPassWord-->
    <string name="oldPSW">舊密碼: </string>
    <string name="newPSW">新密碼: </string>
    <string name="modifytitle">修改密碼</string>
    <string name="oldPSWHint">請輸入舊密碼(6個字)</string>
    <string name="newPSWHint">請輸入新密碼(6個字，不含中文)</string>
    <string name="oldPSWError">舊密碼輸入錯誤</string>
    <string name="lessSixWord">密碼必須為六個字!</string>
    <string name="modifySuccess">修改完成! 新密碼為: </string>
    <string name="noUseThePSW">因為某些不可告人的原因～不能用這組密碼喔(´ｖ｀)</string>
    <string name="noUseThePSW2">Gosh，這種密碼也能被你猜中！可是這組密碼不能用(•ﾟдﾟ•)</string>

    <!--ActionBar-->
    <string name="isRecoeding">(設備記錄中)</string>

    <!--DownloadDataAlert-->
    <string name="alertTitle">注意:</string>
    <string name="itWillStopRecord">即將停止記錄，並開始下載</string>
    <string name="notify">該功能可能會花費大量時間，確定繼續?</string>
    <string name="CountQuantity">資料筆數: </string>
    <string name="downloadDataTitle">資料下載</string>
    <string name="chooseDownModeTitle">請選擇下載方式</string>
    <string name="notifyToDevice">說明:高速下載僅適用高階手機設備</string>
    <string name="stableMode">穩定</string>
    <string name="HighMode">高速</string>
    <string name="progressing">處理中...</string>
    <string name="plzWait">請稍候</string>
    <string name="Final">完成</string>
    <string name="FinalINput">資料已成功匯入！</string>
    <string name="option">本操作大約會費時:</string>
    <string name="dataDownloadfield">資料擷取失敗</string>
    <string name="reTry">重試</string>
    <string name="itHaveData">打開圖表仍有部分資料可以使用</string>
    <string name="noData">尚無資料；請點選資料下載取得資料</string>
    <string name="itWillDeleteAllofData">開啟功能後，將會清除顯示器上已記錄的資料，確定要繼續嗎?</string>
    <string name="recordWillStop">即將停止記錄，繼續嗎?</string>
    <string name="downDataHint">提示:中途按下取消仍可查看部分已下載資料</string>

    <!--ChartActivity-->
    <string name="btlist">列表</string>
    <string name="btChoose">選擇圖表</string>
    <string name="btOutPut">匯出</string>
    <string name="btLookPDF">查看報表</string>
    <!--ChartActivity_Dialog-->
    <string name="MixxxxxChart">綜合圖表</string>
    <string name="choooooseChartLine">請選擇顯示圖表</string>

    <!--ListDownloadDataActivity-->
    <string name="listDisplay">資料列表</string>
    <string name="dataFilter">數據篩選</string>
    <string name="freshSearch"><i>快速搜尋(例如 22:00)</i></string>
    <string name="plzPushTwo">請點擊兩次退出列表</string>

    <!--DataFilterActivity-->
    <string name="dataFilter_plzSelectDateTitle">請選擇日期</string>
    <string name="dataFilter_plzSelectTimeTitle">請選擇時間</string>
    <string name="dataFilter_plzSelectIFTitle">請選擇篩選條件:</string>
    <string name="dataFilter_plzSelectValueTitle">請輸入篩選數值:</string>
    <string name="dataFilter_plzSelect">請選擇項目</string>
    <string name="dataFilter_plzSelectId">記錄編號</string>
    <string name="dataFilter_plzSelectDateAndTime">日期與時間</string>
    <string name="dataFilter_search">搜尋</string>
    <string name="dataFilter_SelectRange">選取範圍: </string>
    <string name="dataFilter_YouChoose">搜尋範圍: </string>
    <string name="dataFilter_plzChooseDT">請選擇欲搜尋日期與時間</string>
    <string name="dataFilter_StartValue">起始編號</string>
    <string name="dataFilter_EndValue">結束編號</string>
    <string name="dataFilter_IDSelectHint">提示：可直接點選轉輪輸入數字</string>
    <string name="BBBBBig">大於</string>
    <string name="BBBBBefore">之前的所有數值</string>
    <string name="SSSSmail">小於</string>
    <string name="AAAAAfter">之後的所有數值</string>
    <string name="equal">等於</string>
    <string name="sorry">很抱歉，沒有相符的數據</string>
    <string name="ExMessage1">因記錄未超過一日，故以當日作為日期範圍之日期</string>
    <string name="dataFilter_plzInputDT＿dontblank">篩選請勿空白!請選擇時間與日期</string>
    <string name="plz_notify">(請注意跨日，00:00即為隔日)</string>

    <!--PDF&CSV Chooser-->
    <string name="CSVPDFTitle">顯示器數據報表</string>
    <string name="reportTitle">資料報表</string>
    <string name="plzChooseExportType">請選擇欲輸出檔案類別</string>
    <string name="fileHasExportSuccess">檔案已成功儲存至</string>
    <string name="justTime">時間</string>
    <string name="localHaveAData">該資料亦可在本機的資料夾內開啟！</string>
    <string name="localposition">位置: </string>

    <!--新增字串-->
    <string name="Y_function_TimeSet">時間設定</string>
    <string name="question">請問想如何設定時間？</string>
    <string name="Y_freshSet">快速設定</string>
    <string name="Y_mutSet">手動設定</string>
    <string name="Y_modifyOK">完成設定！</string>
    <string name="CO2">二氧化碳</string>

    <!--記錄功能-->

    <string name="capture">擷取並離開下載</string>

<!--    新大顯-->
    <string name="newDisconnect">中斷連線</string>
    <string name="Noise">噪音</string>
    <string name="press">壓力</string>
    <string name="output">輸出</string>
    <string name="deviceSetting">裝置設定</string>
    <string name="analog">類比</string>
    <string name="NDD_send">送出</string>
    <string name="ADR">位址</string>
    <string name="REG">暫存器</string>
    <string name="LEN">長度</string>
    <string name="RL123">警報</string>
    <string name="RL456">輸出</string>
    <string name="alarmOff">關</string>
    <string name="alarmOn">開</string>
    <string name="PM2_5">PM2.5</string>
    <string name="PM10">PM10</string>
    <string name="new_Decimal">小數點</string>
    <string name="new_none">無</string>
    <string name="new_modify_Password">更改密碼</string>
    <string name="new_modify_Password_notice">請輸入舊密碼與新密碼</string>
    <string name="new_oldPasswDisError">舊密碼輸入錯誤！</string>
    <string name="new_plzInputSix">請輸入六字密碼！</string>
    <string name="new_savedTitle">已儲存列表</string>


</resources>
