<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/roundforlayout_new2"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_margin="5dp"
        >
        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/new_modify_Password"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/new_modify_Password_notice"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            />

        <EditText
            android:id="@+id/editText_NDD_PSWOld"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:maxLength="6"
            android:hint="舊密碼"
            android:inputType="textPersonName"
            />

        <EditText
            android:id="@+id/editText_NDD_PSWNEW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:maxLength="6"
            android:inputType="textPersonName"
            android:hint="新密碼"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/button_NDD_PSWCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/none"
                android:text="@string/cancel"
                android:textColor="@color/dodBlue"
                android:textSize="18dp"
                android:textStyle="bold"
                android:typeface="sans" />

            <Button
                android:id="@+id/button_NDD_PSWOK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/none"
                android:text="@string/OK"
                android:textColor="@color/dodBlue"
                android:textSize="18dp" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>